--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
     "name": "auth0-singpass-extension",
     "version": "1.0.0",
     "description": "Token endpoint for client assertion exchange",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
+      "build": "npm run clean && npm run extension:build",
+      "clean": "rimraf dist",
+      "extension:build": "a0-ext build:server ./index.js ./dist && cp ./dist/auth0-singpass-extension.extension.$npm_package_version.js ./build/bundle.js"
+      },
     "keywords": [
-      "auth0",
-      "client-assertion",
-      "singpass",
-      "private_key_jwt"
+        "auth0",
+        "client-assertion",
+        "singpass",
+        "private_key_jwt"
     ],
     "author": "vikasjayaram",
     "license": "ISC",
     "dependencies": {
-      "body-parser": "~1.18.2",
-      "express": "~4.16.2",
-      "jose": "^3.15.4",
-      "uuid": "^8.3.2",
-      "axios": "^0.21.1"
+        "axios": "^0.21.1",
+        "body-parser": "~1.18.2",
+        "express": "~4.16.2",
+        "jose": "^3.15.4",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "auth0-extensions-cli": "^4.0.4"
     },
     "auth0-extension": {
       "useBabel": false,
@@ -40,4 +45,4 @@
         "pino"
       ]
     }
-  }
+}
